--- a/static/main.css
+++ b/static/main.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  color: #056d63;
-  /* text-align: center; */
+  color: #f44336;
+  text-align: center;
 }
 
 h1 {
